<resources>
    <string name="app_name">SafeTrip</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification_title">Location Update Running</string>
    <string name="notification_description">This is a default description</string>
    <string name="channel_name">DEFAULT</string>
    <string name="channel_description">Default notification channel</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="safeAreaToggleText">Enable Safe Area</string>
    <string name="safeAreaLong">Longitude center</string>
    <string name="setOnMyLocTxt">Set to current location</string>
    <string name="safeAreaCenterLatTxt">Latitude Center</string>
    <string name="safeAreaRangeTxt">Safe area range (in meters)</string>
    <string name="safeGroupToggleTxt">Safe Group Toggle</string>
    <string name="safeGroupRangeTxt">Safe group distance (in meters)</string>
    <string name="saveBtnTxt">Save Settings</string>
    <string name="serverHostname">placeholder</string>
</resources>
